@@ -12,6 +12,9 @@ Revision history for SPVM
           [After]
           void* (*alloc_memory_block_zero)(SPVM_ENV* env, size_t byte_size);
 
+        [FIX BUGS]
+        * Fix pointer class test bugs.
+
 0.9118  2021-01-13
         [CHANGES]
         * Add cc_each, ccflags_each methods to SPVM::Builder::Config.
